--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -14,7 +14,10 @@ RUN cargo chef cook --release --recipe-path recipe.json
 COPY . .
 RUN cargo build --release --bin local
 
-FROM gcr.io/distroless/cc-debian12 AS runtime
+FROM gcr.io/distroless/cc-debian12:debug AS runtime
 COPY --from=proxy /usr/local/bin/beam /usr/local/bin/proxy
 COPY --from=builder /app/target/release/local /usr/local/bin/
-ENTRYPOINT ["/usr/local/bin/proxy & /usr/local/bin/local"]
+
+ENV APP_secret-sync_KEY=NotSecret
+ENTRYPOINT ["sh", "-c", "/usr/local/bin/proxy & /usr/local/bin/local $@", "_"]
+# ENTRYPOINT [ "tail", "-f", "/dev/null" ]
