--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,20 +10,25 @@ on:
 
 jobs:
   docker:
+    strategy:
+      matrix:
+        component:
+          - local
+          - central
     # This workflow defines how a maven package is built, tested and published.
     # Visit: https://github.com/samply/github-workflows/blob/develop/.github/workflows/docker-ci.yml, for more information
     uses: samply/github-workflows/.github/workflows/docker-ci.yml@main
     with:
       # The Docker Hub Repository you want eventually push to, e.g samply/share-client
-      image-name: "samply/secret-sync"
+      image-name: "samply/secret-sync-${{ matrix.component }}"
 
-      # image-tag-suffix: ${{ matrix.features && format('-{0}', matrix.features) }}
+    #   image-tag-suffix: ${{ matrix.features && format('-{0}', matrix.features) }}
       # Define special prefixes for docker tags. They will prefix each images tag.
       # image-tag-prefix: "foo"
       # Define the build context of your image, typically default '.' will be enough
       # build-context: '.'
       # Define the Dockerfile of your image, typically default './Dockerfile' will be enough
-      build-file: './Dockerfile'
+      build-file: './Dockerfile.${{ matrix.component }}'
       # NOTE: This doesn't work currently
       # A list of build arguments, passed to the docker build
       # build-args: |
