--- a/.github/workflows/dockerhub_readme.yml
+++ b/.github/workflows/dockerhub_readme.yml
@@ -8,6 +8,12 @@ jobs:
   PushContainerReadme:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        component:
+          - local
+          - central
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
