--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ clap = { version = "4.4", features = ["derive", "env"]}
 once_cell = "1"
 tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+futures = "0.3"
 shared = { path = "./shared" }
 
 [profile.release]
