--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -10,4 +10,7 @@ clap = { workspace = true }
 tokio = { workspace = true, features= ["signal"] }
 once_cell = { workspace = true }
 shared = { workspace = true }
-futures = "0.3"
+serde = { workspace = true }
+futures = { workspace = true }
+serde_json = "1"
+rand = "0.8"
