--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -15,3 +15,4 @@ futures = { workspace = true }
 serde_json = "1"
 rand = "0.8"
 reqwest = { version = "0.11", default_features = false, features = ["default-tls"] }
+chrono = "0.4"
