--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -7,12 +7,14 @@ license = "Apache-2.0"
 [dependencies]
 beam-lib = { workspace = true }
 clap = { workspace = true }
-tokio = { workspace = true, features= ["signal"] }
+tokio = { workspace = true, features = ["signal"] }
 once_cell = { workspace = true }
 shared = { workspace = true }
 serde = { workspace = true }
 futures = { workspace = true }
 serde_json = "1"
 rand = "0.8"
-reqwest = { version = "0.12", default_features = false, features = ["default-tls"] }
+reqwest = { version = "0.12", default_features = false, features = [
+  "default-tls",
+] }
 anyhow = "1.0.91"
