--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -17,4 +17,7 @@ rand = "0.8"
 reqwest = { version = "0.12", default_features = false, features = [
   "default-tls",
 ] }
-anyhow = "1.0.91"
+anyhow = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+arboard = "3.4.1"
