--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -16,4 +16,4 @@ serde_json = "1"
 rand = "0.8"
 reqwest = { version = "0.12", default_features = false, features = ["default-tls"] }
 urlencoding = "2.1.3"
-chrono = { version = "0.4.39", features = ["serde"] }
+chrono = "0.4.39"
