--- a/deny.toml
+++ b/deny.toml
@@ -82,6 +82,7 @@ allow = [
     "BSD-3-Clause",
     "Unicode-DFS-2016",
     #"Apache-2.0 WITH LLVM-exception",
+    "Unicode-3.0",
 ]
 # List of explicitly disallowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
