--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -17,6 +17,8 @@ rand = "0.8"
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-reqwest = { version = "0.12", default_features = false, features = ["default-tls"] }
+reqwest = { version = "0.12", default_features = false, features = [
+  "default-tls",
+] }
 urlencoding = "2.1.3"
-chrono = "0.4.39"
+chrono = "0.4"
