--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 [dependencies]
 beam-lib = { workspace = true }
 clap = { workspace = true }
-tokio = { workspace = true, features= ["signal"] }
+tokio = { workspace = true, features = ["signal"] }
 once_cell = { workspace = true }
 shared = { workspace = true }
 serde = { workspace = true }
@@ -15,5 +15,8 @@ futures = { workspace = true }
 serde_json = "1"
 rand = "0.9"
 reqwest = { version = "0.12", default_features = false, features = ["default-tls"] }
+anyhow = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 urlencoding = "2.1.3"
-chrono = "0.4.39"
+chrono = "0.4"
