--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -20,3 +20,5 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 urlencoding = "2.1.3"
 chrono = "0.4"
+icinga-client = { git = "https://github.com/samply/icinga-client.git", tag = "v0.1.0", version = "0.1.0" }
+toml = "0.8.20"
