--- a/local/Cargo.toml
+++ b/local/Cargo.toml
@@ -11,3 +11,5 @@ tokio = { workspace = true }
 once_cell = { workspace = true }
 shared = { workspace = true }
 futures = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
