--- a/central/Cargo.toml
+++ b/central/Cargo.toml
@@ -21,3 +21,4 @@ urlencoding = "2.1.3"
 icinga-client = { git = "https://github.com/samply/icinga-client.git", tag = "v0.1.0", version = "0.1.0" }
 toml = "0.8.20"
 time = { version = "0.3.41", features = ["serde", "parsing", "macros", "formatting"] }
+rand = "0.9.1"
